[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/enemy/enemy_sprite.png" type="Texture" id=1]
[ext_resource path="res://source/enemy_scripts/enemy_script.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.4933, 3.81453 )

[sub_resource type="CircleShape2D" id=2]
radius = 72.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 7 )

[node name="enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.115389, 3.81453 )
shape = SubResource( 1 )

[node name="detect_radius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect_radius"]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 1 )
shape = SubResource( 3 )

[connection signal="body_entered" from="detect_radius" to="." method="_on_detect_radius_body_entered"]
[connection signal="body_exited" from="detect_radius" to="." method="_on_detect_radius_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
